kubernetes_helm/01_apps-with-only-manifests/prod/blue/blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
  namespace: prod
  labels:
    app: blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
        - name: blue
          image: nginx:1.19.2
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
      volumes:
        - name: html
          configMap:
            name: blue
            items:
              - key: body
                path: index.html
