kubernetes_helm/01_apps-with-only-manifests/prod/blue/blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue
  namespace: prod
spec:
  selector:
    app: blue
  ports:
    - port: 80
