kubernetes_helm/01_apps-with-only-manifests/prod/blue/blue-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue
  namespace: prod
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /prod/blue
            pathType: Exact
            backend:
              service:
                name: blue
                port: 
                  number: 80
